--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "open": "^9.1.0"
+    "open": "^9.1.0",
+    "osc-js": "^2.4.0"
   }
 }
